--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -61,6 +61,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/PVECPP")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="PVECPPGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="PVECPPCharacter")
+AssetManagerClassName=/Script/PVECPP.PVEAssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
