--- a/PVECPP.uproject
+++ b/PVECPP.uproject
@@ -7,7 +7,11 @@
 		{
 			"Name": "PVECPP",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"GameplayAbilities",
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
