feat:attack 3 times

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -10,4 +10,5 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Character.Actions.Attack",DevComment="")
 +GameplayTagList=(Tag="Character.Actions.Movement",DevComment="")
++GameplayTagList=(Tag="Character.Condition.IsAttacking",DevComment="")
 
