--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,7 +9,9 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Character.Actions.Attack",DevComment="")
++GameplayTagList=(Tag="Character.Actions.CheckLock",DevComment="")
 +GameplayTagList=(Tag="Character.Actions.Knockback",DevComment="")
++GameplayTagList=(Tag="Character.Actions.Lock",DevComment="")
 +GameplayTagList=(Tag="Character.Actions.Movement",DevComment="")
 +GameplayTagList=(Tag="Character.Condition.IsAttacking",DevComment="")
 +GameplayTagList=(Tag="Character.Events.Knockback",DevComment="")
