--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,6 +62,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="PVECPPGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="PVECPPCharacter")
 AssetManagerClassName=/Script/PVECPP.PVEAssetManager
+PreviewShadowsIndicatorMaterialName=None
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
