--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,5 +14,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Character.Actions.Lock",DevComment="")
 +GameplayTagList=(Tag="Character.Actions.Movement",DevComment="")
 +GameplayTagList=(Tag="Character.Condition.IsAttacking",DevComment="")
++GameplayTagList=(Tag="Character.Events.Attack",DevComment="")
 +GameplayTagList=(Tag="Character.Events.Knockback",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Hit.Enemy",DevComment="")
 
